Revision history for Perl extension Device::Onkyo.

{{$NEXT}}

1.120800  2012-03-20 20:58:38 Europe/London
    - Initial release.